# pyproject.toml
[project]
name = "comfy-join-prompt" # Unique identifier for your node. Immutable after creation.
description = ""
version = "1.1.0" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/jupo-ai/comfy-join-prompt"

[tool.comfy]
PublisherId = "jupo-ai" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "comfy-join-prompt" # Display name for the Custom Node. Can be changed later.
Icon = "" # SVG, PNG, JPG or GIF (MAX. 800x400px)